# sysex-controls

./: README.md  hu.irl.keystep37-settings.yaml  hu.irl.sysex-controls.yaml  meson.build
data/: hu.irl.keystep37-settings.desktop.in  hu.irl.keystep37-settings.gschema.xml  hu.irl.keystep37-settings.metainfo.xml.in  hu.irl.sysex-controls.desktop.in  hu.irl.sysex-controls.gschema.xml  hu.irl.sysex-controls.metainfo.xml.in  meson.build
data/icons/: meson.build
src/: ak-book.c  ak-book.h  ak-control.c  ak-control.h  ak-program-page.c  ak-program-page.h  ak-program-select.c  ak-program-select.h  ak-program-select.ui  ar-book.c  ar-book.h  ar-ch-row.c  ar-ch-row.h  ar-ch-row.ui  ar-control.c  ar-control.h  ar-firmware-info-group.c  ar-firmware-info-group.h  ar-firmware-info-group.ui  ar-preset-chooser-page.c  ar-preset-chooser-page.h  ar-preset-chooser-page.ui  ar-preset-chooser-row.c  ar-preset-chooser-row.h  ar-preset-chooser-row.ui  ar-preset-group.c  ar-preset-group.h  ar-preset-group.ui  ar-preset-page.c  ar-preset-page.h  ar-preset-page.ui  ar2-drum-ch-row.c  ar2-drum-ch-row.h  ar2-drum-ch-row.ui  ar2-glob-ch-row.c  ar2-glob-ch-row.h  ar2-glob-ch-row.ui  ar2-glob2-ch-row.c  ar2-glob2-ch-row.h  ar2-glob2-ch-row.ui  (+130 more)
src/beatstep/: bs-book.c  bs-book.h  bs-book.ui  bs-ch-row.c  bs-ch-row.h  bs-ch-row.ui  bs-controller-page.c  bs-controller-page.h  bs-controller-page.ui  bs-knob-page.c  bs-knob-page.h  bs-knob-page.ui  bs-knob.c  bs-knob.h  bs-knob.ui  bs-pad-page.c  bs-pad-page.h  bs-pad-page.ui  bs-pad.c  bs-pad.h  bs-pad.ui  bs-performance-page.c  bs-performance-page.h  bs-performance-page.ui  bs-preset-chooser-page.c  bs-preset-chooser-page.h  bs-preset-chooser-page.ui  bs-preset-chooser-row.c  bs-preset-chooser-row.h  bs-preset-chooser-row.ui  bs-preset-page.c  bs-preset-page.h  bs-preset-page.ui  bs-sequence-page.c  bs-sequence-page.h  bs-sequence-page.ui  bs-transport-button-page.c  bs-transport-button-page.h  bs-transport-button-page.ui  bs-transport-button.c  (+2 more)
src/beatsteppro/: bsp-book.c  bsp-book.h  bsp-book.ui  bsp-controller-page.c  bsp-controller-page.h  bsp-controller-page.ui  bsp-cv-gate-page.c  bsp-cv-gate-page.h  bsp-cv-gate-page.ui  bsp-drum-group.c  bsp-drum-group.h  bsp-drum-group.ui  bsp-drum-map-page.c  bsp-drum-map-page.h  bsp-drum-map-page.ui  bsp-drum-page.c  bsp-drum-page.h  bsp-drum-page.ui  bsp-knob-page.c  bsp-knob-page.h  bsp-knob-page.ui  bsp-knob.c  bsp-knob.h  bsp-knob.ui  bsp-metronome-page.c  bsp-metronome-page.h  bsp-metronome-page.ui  bsp-pad-page.c  bsp-pad-page.h  bsp-pad-page.ui  bsp-pad.c  bsp-pad.h  bsp-pad.ui  bsp-project-page.c  bsp-project-page.h  bsp-project-page.ui  bsp-project-setting-page.c  bsp-project-setting-page.h  bsp-project-setting-page.ui  bsp-projects-page.c  (+26 more)
src/drumbrute/: db-book.c  db-book.h  db-book.ui  db-controller-page.c  db-controller-page.h  db-controller-page.ui  db-drum-map-page.c  db-drum-map-page.h  db-drum-map-page.ui  db-global-page.c  db-global-page.h  db-global-page.ui  db-roller-page.c  db-roller-page.h  db-roller-page.ui  db-transport-page.c  db-transport-page.h  db-transport-page.ui
src/drumbruteimpact/: dbi-book.c  dbi-book.h  dbi-book.ui  dbi-controller-page.c  dbi-controller-page.h  dbi-controller-page.ui  dbi-drum-map-page.c  dbi-drum-map-page.h  dbi-drum-map-page.ui  dbi-global-page.c  dbi-global-page.h  dbi-global-page.ui  dbi-roller-page.c  dbi-roller-page.h  dbi-roller-page.ui  dbi-transport-page.c  dbi-transport-page.h  dbi-transport-page.ui
src/keylab/: kl-aftertouch-page.c  kl-aftertouch-page.h  kl-aftertouch-page.ui  kl-book.c  kl-book.h  kl-book.ui  kl-controller-page.c  kl-controller-page.h  kl-controller-page.ui  kl-curve-page.c  kl-curve-page.h  kl-curve-page.ui
src/keylab2/: kl2-bank-page.c  kl2-bank-page.h  kl2-bank-page.ui  kl2-book.c  kl2-book.h  kl2-book.ui  kl2-controller-page.c  kl2-controller-page.h  kl2-controller-page.ui  kl2-cv-mod.c  kl2-cv-mod.h  kl2-cv-mod.ui  kl2-cv-page.c  kl2-cv-page.h  kl2-cv-page.ui  kl2-daw-button-page.c  kl2-daw-button-page.h  kl2-daw-button-page.ui  kl2-daw-button.c  kl2-daw-button.h  kl2-daw-button.ui  kl2-fader.c  kl2-fader.h  kl2-fader.ui  kl2-keyboard-page.c  kl2-keyboard-page.h  kl2-keyboard-page.ui  kl2-kfs-page.c  kl2-kfs-page.h  kl2-kfs-page.ui  kl2-knob.c  kl2-knob.h  kl2-knob.ui  kl2-pad-page.c  kl2-pad-page.h  kl2-pad-page.ui  kl2-pad.c  kl2-pad.h  kl2-pad.ui  kl2-pedal-calibration-page.c  (+26 more)
src/keylab25/: kl25-aftertouch-page.c  kl25-aftertouch-page.h  kl25-aftertouch-page.ui  kl25-book.c  kl25-book.h  kl25-book.ui  kl25-controller-page.c  kl25-controller-page.h  kl25-controller-page.ui  kl25-curve-page.c  kl25-curve-page.h  kl25-curve-page.ui
src/keylab3/: kl3-book.c  kl3-book.h  kl3-book.ui  kl3-controller-page.c  kl3-controller-page.h  kl3-controller-page.ui  kl3-display-button-page.c  kl3-display-button-page.h  kl3-display-button.c  kl3-encoder-page.c  kl3-encoder-page.ui  kl3-encoder.c  kl3-fader-page.c  kl3-fader-page.h  kl3-fader-page.ui  kl3-fader.c  kl3-fader.h  kl3-fader.ui  kl3-keyboard-page.c  kl3-main-encoder-page.c  kl3-main-encoder-page.h  kl3-main-encoder-page.ui  kl3-pad-bank-page.c  kl3-pad-bank-page.h  kl3-pad-page.c  kl3-pad-page.h  kl3-pad-page.ui  kl3-pad.c  kl3-part-page.c  kl3-part-page.h  kl3-part-page.ui  kl3-parts-page.c  kl3-parts-page.h  kl3-parts-page.ui  kl3-pedal-page.c  kl3-pedal-page.h  kl3-pedal-page.ui  kl3-pedal.c  kl3-pedal.h  kl3-pitch-mod-page.c  (+12 more)
src/keylab88/: kl88-aftertouch-page.c  kl88-aftertouch-page.h  kl88-aftertouch-page.ui  kl88-book.c  kl88-book.h  kl88-book.ui  kl88-controller-page.c  kl88-controller-page.h  kl88-controller-page.ui  kl88-curve-page.c  kl88-curve-page.h  kl88-curve-page.ui  kl88-transposition-page.c  kl88-transposition-page.h  kl88-transposition-page.ui
src/keylabes/: kles-book.c  kles-book.h  kles-book.ui  kles-button-page.c  kles-button-page.h  kles-button-page.ui  kles-button.c  kles-button.h  kles-button.ui  kles-controller-page.c  kles-controller-page.h  kles-controller-page.ui  kles-fader-page.c  kles-fader-page.h  kles-fader-page.ui  kles-fader.c  (+29 more)
(+752 files in other folders)
