sc_sources = [
  'ak-book.c',
  'ak-control.c',
  'ak-program-page.c',
  'ak-program-select.c',

  'ar2-glob-ch-row.c',
  'ar2-key-ch-row.c',
  'ar2-rgb-color-row.c',
  'ar2-user-ch-row.c',

  'ar3-active-ch-row.c',
  'ar3-ch-row.c',
  'ar3-color-row.c',

  'ar-book.c',
  'ar-control.c',
  'ar-firmware-info-group.c',
  'ar-preset-chooser-page.c',
  'ar-preset-chooser-row.c',
  'ar-preset-page.c',

  'sc-action-row.c',
  'sc-application.c',
  'sc-book.c',
  'sc-cc-row.c',
  'sc-ch-row.c',
  'sc-color-row.c',
  'sc-combo-row.c',
  'sc-controller-row.c',
  'sc-control-value.c',
  'sc-control.c',
  'sc-midi.c',
  'sc-navigation-page.c',
  'sc-note-row.c',
  'sc-pc-row.c',
  'sc-preferences-group.c',
  'sc-preferences-page.c',
  'sc-window.c',
  'main.c',

  'beatstep/bs-book.c',
  'beatstep/bs-controller-page.c',
  'beatstep/bs-knob.c',
  'beatstep/bs-knob-page.c',
  'beatstep/bs-pad.c',
  'beatstep/bs-pad-page.c',
  'beatstep/bs-performance-page.c',
  'beatstep/bs-sequence-page.c',
  'beatstep/bs-transport-button.c',
  'beatstep/bs-transport-button-page.c',

  'keylab2/kl2-bank-page.c',
  'keylab2/kl2-book.c',
  'keylab2/kl2-controller-page.c',
  'keylab2/kl2-cv-mod.c',
  'keylab2/kl2-cv-page.c',
  'keylab2/kl2-daw-button.c',
  'keylab2/kl2-daw-button-page.c',
  'keylab2/kl2-fader.c',
  'keylab2/kl2-keyboard-page.c',
  'keylab2/kl2-kfs-page.c',
  'keylab2/kl2-knob.c',
  'keylab2/kl2-pad.c',
  'keylab2/kl2-pad-page.c',
  'keylab2/kl2-pedal.c',
  'keylab2/kl2-pedal-calibration.c',
  'keylab2/kl2-pedal-page.c',
  'keylab2/kl2-pitch-mod-page.c',
  'keylab2/kl2-select-button.c',
  'keylab2/kl2-velocity-page.c',

  'keylab3/kl3-book.c',
  'keylab3/kl3-controller-page.c',
  'keylab3/kl3-part-page.c',
  'keylab3/kl3-parts-page.c',
  'keylab3/kl3-pedal-page.c',
  'keylab3/kl3-preset-page.c',
  'keylab3/kl3-presets-page.c',
  'keylab3/kl3-velocity-page.c',
  'keylab3/preset/kl3-display-button.c',
  'keylab3/preset/kl3-display-button-page.c',
  'keylab3/preset/kl3-encoder.c',
  'keylab3/preset/kl3-encoder-page.c',
  'keylab3/preset/kl3-fader.c',
  'keylab3/preset/kl3-fader-page.c',
  'keylab3/preset/kl3-keyboard-page.c',
  'keylab3/preset/kl3-main-encoder-page.c',
  'keylab3/preset/kl3-pad.c',
  'keylab3/preset/kl3-pad-bank-page.c',
  'keylab3/preset/kl3-pad-page.c',
  'keylab3/preset/kl3-pedal.c',
  'keylab3/preset/kl3-pitch-mod-page.c',
  'keylab3/preset/kl3-sea-page.c',

  'keylabes/kles-book.c',
  'keylabes/kles-button.c',
  'keylabes/kles-button-page.c',
  'keylabes/kles-controller-page.c',
  'keylabes/kles-fader.c',
  'keylabes/kles-fader-page.c',
  'keylabes/kles-keyboard-page.c',
  'keylabes/kles-knob.c',
  'keylabes/kles-knob-page.c',
  'keylabes/kles-pad.c',
  'keylabes/kles-pad-page.c',
  'keylabes/kles-pedal-page.c',
  'keylabes/kles-velocity-page.c',

  'keylabes3/kles3-book.c',
  'keylabes3/kles3-controller-page.c',
  'keylabes3/kles3-pedal-page.c',
  'keylabes3/kles3-preset-page.c',
  'keylabes3/kles3-velocity-page.c',
  'keylabes3/preset/kles3-button.c',
  'keylabes3/preset/kles3-button-page.c',
  'keylabes3/preset/kles3-daw-button.c',
  'keylabes3/preset/kles3-daw-control-row.c',
  'keylabes3/preset/kles3-fader.c',
  'keylabes3/preset/kles3-fader-page.c',
  'keylabes3/preset/kles3-knob.c',
  'keylabes3/preset/kles3-knob-page.c',
  'keylabes3/preset/kles3-led-color.c',
  'keylabes3/preset/kles3-main-knob-page.c',
  'keylabes3/preset/kles3-pad.c',
  'keylabes3/preset/kles3-pad-page.c',
  'keylabes3/preset/kles3-pitch-mod-page.c',

  'keystep32/ks32-book.c',
  'keystep32/ks32-controller-page.c',
  'keystep32/ks32-cv-gate-page.c',
  'keystep32/ks32-hold-switch-page.c',
  'keystep32/ks32-mod-pitch-page.c',
  'keystep32/ks32-sequence-page.c',
  'keystep32/ks32-sustain-pedal-page.c',
  'keystep32/ks32-transport-page.c',

  'keystep37/ks37-book.c',
  'keystep37/ks37-cc-bank-page.c',
  'keystep37/ks37-controller-page.c',
  'keystep37/ks37-cv-gate-page.c',
  'keystep37/ks37-knob.c',
  'keystep37/ks37-sequence-page.c',
  'keystep37/ks37-transport-page.c',

  'microlab/microlab-book.c',
  'microlab/microlab-hold-page.c',
  'microlab/microlab-keyboard-page.c',
  'microlab/microlab-mod-page.c',
  'microlab/microlab-pitch-page.c',

  'minilab2/ml2-book.c',
  'minilab2/ml2-button.c',
  'minilab2/ml2-controller-page.c',
  'minilab2/ml2-knob.c',
  'minilab2/ml2-knob-extra-page.c',
  'minilab2/ml2-knob-page.c',
  'minilab2/ml2-pad.c',
  'minilab2/ml2-pad-page.c',
  'minilab2/ml2-pedal-page.c',
  'minilab2/ml2-pitch-mod-page.c',
  'minilab2/ml2-velocity-page.c',

  'minilab3/ml3-book.c',
  'minilab3/ml3-controller-page.c',
  'minilab3/ml3-fader.c',
  'minilab3/ml3-fader-page.c',
  'minilab3/ml3-knob.c',
  'minilab3/ml3-knob-page.c',
  'minilab3/ml3-main-knob.c',
  'minilab3/ml3-main-knob-click.c',
  'minilab3/ml3-main-knob-page.c',
  'minilab3/ml3-pad.c',
  'minilab3/ml3-pad-page.c',
  'minilab3/ml3-pedal-page.c',
  'minilab3/ml3-pitch-mod-page.c',
  'minilab3/ml3-preset-page.c',
  'minilab3/ml3-spm-page.c',
  'minilab3/ml3-velocity-page.c',

  'mpkmini2/amm2-arpeggiator-page.c',
  'mpkmini2/amm2-book.c',
  'mpkmini2/amm2-joystick-page.c',
  'mpkmini2/amm2-keybed-page.c',
  'mpkmini2/amm2-knob.c',
  'mpkmini2/amm2-knob-page.c',
  'mpkmini2/amm2-pad.c',
  'mpkmini2/amm2-pad-bank-page.c',
  'mpkmini2/amm2-pad-page.c',
  'mpkmini2/amm2-program-page.c',

  'mpkmini3/amm3-arpeggiator-page.c',
  'mpkmini3/amm3-book.c',
  'mpkmini3/amm3-joystick-page.c',
  'mpkmini3/amm3-keybed-page.c',
  'mpkmini3/amm3-knob.c',
  'mpkmini3/amm3-knob-page.c',
  'mpkmini3/amm3-pad.c',
  'mpkmini3/amm3-pad-bank-page.c',
  'mpkmini3/amm3-pad-page.c',
  'mpkmini3/amm3-program-page.c',
]

sc_deps = [
  dependency('gtk4'),
  dependency('libadwaita-1', version: '>= 1.4'),
  dependency('alsa'),
  dependency('gmodule-export-2.0'),
]

sc_sources += gnome.compile_resources('sc-resources',
  'sc.gresource.xml',
  c_name: 'sc'
)

executable('sysex-controls', sc_sources,
  dependencies: sc_deps,
       install: true,
)
