sc_sources = [
  'ak-book.c',
  'ak-program-page.c',
  'ak-program-select.c',

  'ar2-drum-ch-row.c',
  'ar2-glob-ch-row.c',
  'ar2-glob2-ch-row.c',
  'ar2-key-ch-row.c',
  'ar2-note-drop-down.c',
  'ar2-off-ch-row.c',
  'ar2-rgb-color-row.c',
  'ar2-user-all-ch-row.c',
  'ar2-user-ch-row.c',
  'ar2-user-scale.c',

  'ar3-active-ch-row.c',
  'ar3-ch-row.c',
  'ar3-color-row.c',

  'ar-book.c',
  'ar-control.c',
  'ar-firmware-info-group.c',
  'ar-preset-chooser-page.c',
  'ar-preset-chooser-row.c',
  'ar-preset-page.c',

  'korg-book.c',
  'korg-firmware-info-group.c',
  'korg-scene-page.c',

  'mm-control.c',
  'mm-page.c',

  'sc-action-row.c',
  'sc-application.c',
  'sc-book.c',
  'sc-cc-row.c',
  'sc-ch-row.c',
  'sc-ch-row-glob.c',
  'sc-color-row.c',
  'sc-combo-row.c',
  'sc-controller-row.c',
  'sc-control-value.c',
  'sc-control.c',
  'sc-midi.c',
  'sc-navigation-page.c',
  'sc-note-row.c',
  'sc-pc-row.c',
  'sc-preferences-group.c',
  'sc-preferences-page.c',
  'sc-window.c',
  'main.c',

  'beatstep/bs-book.c',
  'beatstep/bs-controller-page.c',
  'beatstep/bs-knob.c',
  'beatstep/bs-knob-page.c',
  'beatstep/bs-pad.c',
  'beatstep/bs-pad-page.c',
  'beatstep/bs-performance-page.c',
  'beatstep/bs-sequence-page.c',
  'beatstep/bs-transport-button.c',
  'beatstep/bs-transport-button-page.c',

  'beatsteppro/bsp-book.c',
  'beatsteppro/bsp-controller-page.c',
  'beatsteppro/bsp-cv-gate-page.c',
  'beatsteppro/bsp-drum-group.c',
  'beatsteppro/bsp-drum-map-page.c',
  'beatsteppro/bsp-drum-page.c',
  'beatsteppro/bsp-knob.c',
  'beatsteppro/bsp-knob-page.c',
  'beatsteppro/bsp-metronome-page.c',
  'beatsteppro/bsp-pad.c',
  'beatsteppro/bsp-pad-page.c',
  'beatsteppro/bsp-project-page.c',
  'beatsteppro/bsp-project-setting-page.c',
  'beatsteppro/bsp-projects-page.c',
  'beatsteppro/bsp-sequencer-page.c',
  'beatsteppro/bsp-step.c',
  'beatsteppro/bsp-step-page.c',
  'beatsteppro/bsp-sync-page.c',
  'beatsteppro/bsp-touch-strip-page.c',
  'beatsteppro/bsp-transport-page.c',
  'beatsteppro/bsp-transposition-page.c',
  'beatsteppro/bsp-user-scale-page.c',

  'drumbrute/db-book.c',
  'drumbrute/db-controller-page.c',
  'drumbrute/db-drum-map-page.c',
  'drumbrute/db-global-page.c',
  'drumbrute/db-roller-page.c',
  'drumbrute/db-transport-page.c',

  'drumbruteimpact/dbi-book.c',
  'drumbruteimpact/dbi-controller-page.c',
  'drumbruteimpact/dbi-drum-map-page.c',
  'drumbruteimpact/dbi-global-page.c',
  'drumbruteimpact/dbi-roller-page.c',
  'drumbruteimpact/dbi-transport-page.c',

  'keylab/kl-aftertouch-page.c',
  'keylab/kl-book.c',
  'keylab/kl-controller-page.c',
  'keylab/kl-curve-page.c',

  'keylab25/kl25-aftertouch-page.c',
  'keylab25/kl25-book.c',
  'keylab25/kl25-controller-page.c',
  'keylab25/kl25-curve-page.c',

  'keylab2/kl2-bank-page.c',
  'keylab2/kl2-book.c',
  'keylab2/kl2-controller-page.c',
  'keylab2/kl2-cv-mod.c',
  'keylab2/kl2-cv-page.c',
  'keylab2/kl2-daw-button.c',
  'keylab2/kl2-daw-button-page.c',
  'keylab2/kl2-fader.c',
  'keylab2/kl2-keyboard-page.c',
  'keylab2/kl2-kfs-page.c',
  'keylab2/kl2-knob.c',
  'keylab2/kl2-pad.c',
  'keylab2/kl2-pad-page.c',
  'keylab2/kl2-pedal.c',
  'keylab2/kl2-pedal-calibration.c',
  'keylab2/kl2-pedal-calibration-page.c',
  'keylab2/kl2-pedal-page.c',
  'keylab2/kl2-pitch-mod-page.c',
  'keylab2/kl2-preset-page.c',
  'keylab2/kl2-presets-page.c',
  'keylab2/kl2-select-button.c',
  'keylab2/kl2-velocity-page.c',

  'keylab3/kl3-book.c',
  'keylab3/kl3-controller-page.c',
  'keylab3/kl3-display-button.c',
  'keylab3/kl3-display-button-page.c',
  'keylab3/kl3-encoder.c',
  'keylab3/kl3-encoder-page.c',
  'keylab3/kl3-fader.c',
  'keylab3/kl3-fader-page.c',
  'keylab3/kl3-keyboard-page.c',
  'keylab3/kl3-main-encoder-page.c',
  'keylab3/kl3-pad.c',
  'keylab3/kl3-pad-bank-page.c',
  'keylab3/kl3-pad-page.c',
  'keylab3/kl3-part-page.c',
  'keylab3/kl3-parts-page.c',
  'keylab3/kl3-pedal.c',
  'keylab3/kl3-pedal-page.c',
  'keylab3/kl3-pitch-mod-page.c',
  'keylab3/kl3-preset-page.c',
  'keylab3/kl3-presets-page.c',
  'keylab3/kl3-sea-page.c',
  'keylab3/kl3-velocity-page.c',

  'keylab88/kl88-aftertouch-page.c',
  'keylab88/kl88-book.c',
  'keylab88/kl88-controller-page.c',
  'keylab88/kl88-curve-page.c',
  'keylab88/kl88-transposition-page.c',

  'keylabes/kles-book.c',
  'keylabes/kles-button.c',
  'keylabes/kles-button-page.c',
  'keylabes/kles-controller-page.c',
  'keylabes/kles-fader.c',
  'keylabes/kles-fader-page.c',
  'keylabes/kles-keyboard-page.c',
  'keylabes/kles-knob.c',
  'keylabes/kles-knob-page.c',
  'keylabes/kles-pad.c',
  'keylabes/kles-pad-page.c',
  'keylabes/kles-pedal-page.c',
  'keylabes/kles-preset-page.c',
  'keylabes/kles-presets-page.c',
  'keylabes/kles-velocity-page.c',

  'keylabes3/kles3-book.c',
  'keylabes3/kles3-button.c',
  'keylabes3/kles3-button-page.c',
  'keylabes3/kles3-controller-page.c',
  'keylabes3/kles3-daw-button.c',
  'keylabes3/kles3-daw-control-row.c',
  'keylabes3/kles3-fader.c',
  'keylabes3/kles3-fader-page.c',
  'keylabes3/kles3-knob.c',
  'keylabes3/kles3-knob-page.c',
  'keylabes3/kles3-led-color.c',
  'keylabes3/kles3-main-knob-page.c',
  'keylabes3/kles3-pad.c',
  'keylabes3/kles3-pad-page.c',
  'keylabes3/kles3-pedal-page.c',
  'keylabes3/kles3-pitch-mod-page.c',
  'keylabes3/kles3-preset-page.c',
  'keylabes3/kles3-presets-page.c',
  'keylabes3/kles3-velocity-page.c',

  'keystep32/ks32-book.c',
  'keystep32/ks32-controller-page.c',
  'keystep32/ks32-cv-gate-page.c',
  'keystep32/ks32-hold-switch-page.c',
  'keystep32/ks32-mod-pitch-page.c',
  'keystep32/ks32-sequence-page.c',
  'keystep32/ks32-sustain-pedal-page.c',
  'keystep32/ks32-transport-page.c',

  'keystep37/ks37-book.c',
  'keystep37/ks37-cc-bank-page.c',
  'keystep37/ks37-controller-page.c',
  'keystep37/ks37-cv-gate-page.c',
  'keystep37/ks37-knob.c',
  'keystep37/ks37-sequence-page.c',
  'keystep37/ks37-transport-page.c',

  'keysteppro/ksp-book.c',
  'keysteppro/ksp-controller-page.c',
  'keysteppro/ksp-cv-drum-gate.c',
  'keysteppro/ksp-cv-gate-page.c',
  'keysteppro/ksp-cv-voice.c',
  'keysteppro/ksp-drum-map-page.c',
  'keysteppro/ksp-knob.c',
  'keysteppro/ksp-knob-page.c',
  'keysteppro/ksp-launch-quantize-page.c',
  'keysteppro/ksp-metronome-page.c',
  'keysteppro/ksp-sync-page.c',
  'keysteppro/ksp-touch-strip-page.c',
  'keysteppro/ksp-track-channel-page.c',

  'microlab/microlab-book.c',
  'microlab/microlab-hold-page.c',
  'microlab/microlab-keyboard-page.c',
  'microlab/microlab-mod-page.c',
  'microlab/microlab-pitch-page.c',

  'microlab3/microlab3-book.c',
  'microlab3/microlab3-controller-page.c',
  'microlab3/microlab3-keyboard-page.c',
  'microlab3/microlab3-pedal-page.c',
  'microlab3/microlab3-pitch-mod-page.c',

  'minibrute2/mb2-book.c',
  'minibrute2/mb2-controller-page.c',
  'minibrute2/mb2-cv-gate-page.c',
  'minibrute2/mb2-mod-pitch-page.c',
  'minibrute2/mb2-sequence-page.c',
  'minibrute2/mb2-transport-page.c',
  'minibrute2/mb2-transposition-page.c',

  'minibrute2s/mb2s-book.c',
  'minibrute2s/mb2s-controller-page.c',
  'minibrute2s/mb2s-cv-gate-page.c',
  'minibrute2s/mb2s-mod-pitch-page.c',
  'minibrute2s/mb2s-sequence-page.c',
  'minibrute2s/mb2s-transport-page.c',
  'minibrute2s/mb2s-transposition-page.c',
  'minibrute2s/mb2s-user-scale-page.c',

  'minilab/ml-book.c',
  'minilab/ml-controller-page.c',
  'minilab/ml-knob.c',
  'minilab/ml-knob-page.c',
  'minilab/ml-pad.c',
  'minilab/ml-pad-page.c',
  'minilab/ml-pedal-page.c',
  'minilab/ml-pitch-mod-page.c',
  'minilab/ml-preset-page.c',
  'minilab/ml-presets-page.c',
  'minilab/ml-velocity-page.c',

  'minilab2/ml2-book.c',
  'minilab2/ml2-button.c',
  'minilab2/ml2-controller-page.c',
  'minilab2/ml2-knob.c',
  'minilab2/ml2-knob-extra-page.c',
  'minilab2/ml2-knob-page.c',
  'minilab2/ml2-pad.c',
  'minilab2/ml2-pad-page.c',
  'minilab2/ml2-pedal-page.c',
  'minilab2/ml2-pitch-mod-page.c',
  'minilab2/ml2-preset-page.c',
  'minilab2/ml2-presets-page.c',
  'minilab2/ml2-velocity-page.c',

  'minilab3/ml3-book.c',
  'minilab3/ml3-controller-page.c',
  'minilab3/ml3-fader.c',
  'minilab3/ml3-fader-page.c',
  'minilab3/ml3-knob.c',
  'minilab3/ml3-knob-page.c',
  'minilab3/ml3-main-knob.c',
  'minilab3/ml3-main-knob-click.c',
  'minilab3/ml3-main-knob-page.c',
  'minilab3/ml3-pad.c',
  'minilab3/ml3-pad-page.c',
  'minilab3/ml3-pedal-page.c',
  'minilab3/ml3-pitch-mod-page.c',
  'minilab3/ml3-preset-page.c',
  'minilab3/ml3-preset-selected-page.c',
  'minilab3/ml3-presets-page.c',
  'minilab3/ml3-spm-page.c',
  'minilab3/ml3-velocity-page.c',

  'mpkmini/amm-arpeggiator-page.c',
  'mpkmini/amm-book.c',
  'mpkmini/amm-keybed-page.c',
  'mpkmini/amm-knob.c',
  'mpkmini/amm-knob-page.c',
  'mpkmini/amm-pad.c',
  'mpkmini/amm-pad-bank-page.c',
  'mpkmini/amm-pad-page.c',
  'mpkmini/amm-program-page.c',

  'mpkmini2/amm2-arpeggiator-page.c',
  'mpkmini2/amm2-book.c',
  'mpkmini2/amm2-joystick-page.c',
  'mpkmini2/amm2-keybed-page.c',
  'mpkmini2/amm2-knob.c',
  'mpkmini2/amm2-knob-page.c',
  'mpkmini2/amm2-pad.c',
  'mpkmini2/amm2-pad-bank-page.c',
  'mpkmini2/amm2-pad-page.c',
  'mpkmini2/amm2-program-page.c',

  'mpkmini3/amm3-arpeggiator-page.c',
  'mpkmini3/amm3-book.c',
  'mpkmini3/amm3-joystick-page.c',
  'mpkmini3/amm3-keybed-page.c',
  'mpkmini3/amm3-knob.c',
  'mpkmini3/amm3-knob-page.c',
  'mpkmini3/amm3-pad.c',
  'mpkmini3/amm3-pad-bank-page.c',
  'mpkmini3/amm3-pad-page.c',
  'mpkmini3/amm3-program-page.c',

  'nanokey2/nk2-book.c',
  'nanokey2/nk2-button-page.c',
  'nanokey2/nk2-keyboard-page.c',
  'nanokey2/nk2-pitch-bend-page.c',
  'nanokey2/nk2-scene-page.c',

  'nanokontrol2/nkl2-book.c',
  'nanokontrol2/nkl2-button-page.c',
  'nanokontrol2/nkl2-controller-group-page.c',
  'nanokontrol2/nkl2-controller-groups-page.c',
  'nanokontrol2/nkl2-function-button-page.c',
  'nanokontrol2/nkl2-knob-page.c',
  'nanokontrol2/nkl2-scene-page.c',
  'nanokontrol2/nkl2-slider-page.c',
  'nanokontrol2/nkl2-transport-buttons-page.c',

  'sparkle/sple-book.c',
  'sparkle/sple-controller-page.c',
  'sparkle/sple-velocity-page.c',

  'thelaboratory/tl-aftertouch-page.c',
  'thelaboratory/tl-book.c',
  'thelaboratory/tl-controller-page.c',
  'thelaboratory/tl-curve-page.c',
]

sc_deps = [
  dependency('gtk4'),
  dependency('libadwaita-1', version: '>= 1.4'),
  dependency('alsa'),
  dependency('gmodule-export-2.0'),
]

sc_sources += gnome.compile_resources('sc-resources',
  'sc.gresource.xml',
  c_name: 'sc'
)

executable('sysex-controls', sc_sources,
  dependencies: sc_deps,
       install: true,
)
