application_id = 'hu.irl.sysex-controls'

scalable_dir = 'hicolor' / 'scalable' / 'apps'
install_data(
  scalable_dir / ('@0@.svg').format(application_id),
  install_dir: get_option('datadir') / 'icons' / scalable_dir
)
install_data(
  scalable_dir / ('@0@-controller.svg').format(application_id),
  install_dir: get_option('datadir') / 'icons' / scalable_dir
)